resolved emoji text description overflowing issue

--- a/res/css/views/emojipicker/_EmojiPicker.pcss
+++ b/res/css/views/emojipicker/_EmojiPicker.pcss
@@ -224,6 +224,9 @@ limitations under the License.
 
 .mx_EmojiPicker_preview_text {
     display: flex;
+    width: 78%;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     flex-direction: column;
 }
 
@@ -233,6 +236,7 @@ limitations under the License.
 
 .mx_EmojiPicker_shortcode {
     color: $light-fg-color;
+    overflow-wrap: break-word;
     font-size: $font-14px;
 
     &::before,
